Alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -1199,7 +1199,6 @@ width: 80%;
   flex-direction: row;
   flex-wrap: wrap-reverse;
   justify-content: center;
-  padding-bottom: 6rem;
   width: 80%;
 }
 
@@ -1208,7 +1207,7 @@ width: 80%;
   flex-direction: column;
   flex: 1 0 50%;
   margin: 0 auto;
-  padding: 4rem 0 4rem 0;
+  padding: 4rem 0 0 0;
 }
 
 .final-column2 h1 {
@@ -1233,8 +1232,8 @@ width: 80%;
 }
 
 .final-column4 {
+  padding-bottom: 2rem;
   margin: 0 auto;
-  padding-top: 2rem;
   width: 80%;
 }
 
@@ -1244,19 +1243,31 @@ width: 80%;
 }
 
 .conclusion-grid {
+  align-items: center;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
 }
 
 .conclusion-column1 {
+  align-items: center;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding-bottom: 4rem;
+  justify-content: center;
+  flex-basis: 100%;
 }
 
-.conclusion-column1 img {
+.conclusion-column2 {
+  margin: 0 auto;
+  margin-bottom: 4rem;
+  text-align: center;
+  flex-basis: 100%;
+}
+
+.conclusion-column2 img {
   height: auto;
   max-width: 20rem;
   min-width: 15rem;
@@ -1266,6 +1277,10 @@ width: 80%;
 
 .conclusion-column2 {
   margin: 0 auto;
+  width: 80%;
+}
+
+.conclusion-column3 {
   width: 80%;
 }
 
@@ -1371,7 +1386,6 @@ width: 80%;
     width: 80%;
     z-index: 2;
   }
-
   /*** Boom Decoration ***/
   .Boom {
     height: auto;
@@ -1382,7 +1396,6 @@ width: 80%;
     width: 80%;
     z-index: 2;
   }
-
   /*** Smash Decoration ***/
   .Smash {
     background: none;
@@ -1395,11 +1408,11 @@ width: 80%;
     width: 80%;
     z-index: 2;
   }
-
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    /*** typography ***/
   h1 {
     font-family: 'Raleway', sans-serif;
     font-size: 3.6rem;
@@ -1431,7 +1444,7 @@ width: 80%;
     font-size: 1.8rem;
     line-height: 1.2;
   }
-
+  /*** navigation bar ***/
   .nav li {
     float: left;
   }
@@ -1463,7 +1476,7 @@ width: 80%;
   .nav li a:hover {
     color: #CF2833;
   }
-
+  /*** hero ***/
   .hero-column2 {
     padding: 0 4rem 8rem 0;
   }
@@ -1517,12 +1530,12 @@ width: 80%;
     width: 80%;
     z-index: 2;
   }
-
+  /*** Design process ***/
   .process-column {
-    padding: 0 2rem 0 2rem;
     flex: 2;
+    padding: 0 2rem 0 2rem;
   }
-
+  /*** Testing Two ***/
   .testingtwo-column8 {
     display: flex;
     flex-direction: column;
@@ -1530,7 +1543,17 @@ width: 80%;
     margin: 0 auto;
     padding: 0 4rem 8rem 4rem;
   }
+  /*** Conclusion ***/
+  .conclusion-column2 {
+    flex: 2;
+  }
 
+  .conclusion-column2 img {
+    height: auto;
+    max-width: 40rem;
+    padding-bottom: 4rem;
+    width: 80%;
+  }
   /*** Bio ***/
   .bio-column3 img {
     height: auto;
@@ -1564,7 +1587,7 @@ width: 80%;
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
+  /*** navigation bar ***/
   .nav li {
     float: left;
   }
@@ -1704,6 +1727,7 @@ width: 80%;
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    /*** Tyopgraphy  ***/
   h1 {
     font-family: 'Raleway', sans-serif;
     font-size: 4.8rem;
@@ -1735,13 +1759,13 @@ width: 80%;
     font-size: 1.8rem;
     line-height: 1.2;
   }
-
+  /*** Most recent work landing ***/
   .work-column3 img {
     height: auto;
     max-width: 40rem;
     width: 100%;
   }
-
+  /*** design process ***/
   .process-column {
     align-items: center;
     flex: 0 1 25%;
@@ -1749,7 +1773,7 @@ width: 80%;
     padding: 4rem 4rem;
     text-align: center;
   }
-
+  /*** testimonial ***/
   .test {
     display: flex;
     flex-direction: column;
@@ -1852,7 +1876,7 @@ width: 80%;
     width: 60%;
   }
 
-    /**Typography**/
+  /**Typography**/
   .branding-column8 {
     margin: 0 auto;
     padding: 4rem 0;
@@ -1925,15 +1949,13 @@ width: 80%;
     width: 60%;
   }
 
-  .conclusion-column1 img {
+  .conclusion-column2 img {
     height: auto;
-    max-width: 30rem;
+    max-width: 40rem;
     padding-bottom: 4rem;
     width: 80%;
   }
-
 /** Bio **/
-
   .bio-column3 img {
     height: auto;
     margin-bottom: -12.5rem;
